fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Logga ut",
   "Mark notifications as read": "Markera alla aviseringar som lästa",
   "Archive all notifications": "Arkivera alla aviseringar",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Ny App",
   "New Application": "Ny applikation",
   "This version of the document was deleted": "Denna version av dokumentet har tagits bort",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Tyvärr, ett fel har uppstått.",
   "Click to retry": "Klicka för att försöka igen",
   "Back": "Tillbaka",
+  "Notification options": "Notification options",
   "Unknown": "Okänd",
   "Mark all as read": "Markera alla som lästa",
   "You're all caught up": "Inga olästa meddelanden",
@@ -678,6 +681,7 @@
   "90 days": "90 dagar",
   "No expiration": "Ingen utgång",
   "The document archive is empty at the moment.": "Dokumentarkivet är för närvarande tomt.",
+  "Done editing": "Redigering klar",
   "Drop documents to import": "Släpp dokument att importera",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> innehåller inga\n                    -dokument ännu.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} användare och {{ groupsCount }} grupper med åtkomst",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} användare med behörighet",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupp med behörighet",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupper med behörighet",
-  "Archived by {{userName}}": "Arkiverad av {{userName}}",
-  "Sorry, an error occurred saving the collection": "Tyvärr, ett fel uppstod när samlingen skulle sparas",
-  "Add a description": "Lägg till en beskrivning",
   "Overview": "Översikt",
   "Popular": "Popular",
   "Recently updated": "Nyligen uppdaterad",
   "Recently published": "Nyligen publicerade",
   "Least recently updated": "Äldst uppdaterade",
   "A–Z": "A-Ö",
+  "Archived by {{userName}}": "Arkiverad av {{userName}}",
+  "Sorry, an error occurred saving the collection": "Tyvärr, ett fel uppstod när samlingen skulle sparas",
+  "Add a description": "Lägg till en beskrivning",
   "Signing in": "Loggar in",
   "You can safely close this window once the Outline desktop app has opened": "Du kan stänga detta fönster säkert när appen Outline har öppnat",
   "Error creating comment": "Fel vid skapande av kommentar",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Redigera {{noun}}",
   "Archived": "Arkiverad",
   "Save draft": "Spara utkast",
-  "Done editing": "Redigering klar",
   "Restore version": "Återställ version",
   "No history yet": "Ingen historik än",
   "Source": "Källa",
