--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Oturumu kapat",
   "Mark notifications as read": "Bildirimleri okundu olarak işaretle",
   "Archive all notifications": "Tüm bildirimleri arşivle",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Yeni Uygulama",
   "New Application": "Yeni Uygulama",
   "This version of the document was deleted": "Belgenin bu sürümü silindi",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Üzgünüz, bir hata oluştu.",
   "Click to retry": "Tekrar denemek için tıklayın",
   "Back": "Geri",
+  "Notification options": "Notification options",
   "Unknown": "Bilinmeyen",
   "Mark all as read": "Tümünü okundu olarak işaretle",
   "You're all caught up": "Tüm bildirimleri gördünüz",
@@ -678,6 +681,7 @@
   "90 days": "90 gün",
   "No expiration": "Sona erme yok",
   "The document archive is empty at the moment.": "Belge arşivi şu anda boş.",
+  "Done editing": "Düzenleme bitti",
   "Drop documents to import": "İçe aktarmak için belgeleri buraya bırakın",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> henüz belge içermiyor.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "erişimi olan {{ usersCount }} kullanıcı ve {{ groupsCount }} grup",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "erişimi olan {{ usersCount }} kullanıcı",
   "{{ groupsCount }} groups with access": "erişimi olan {{ groupsCount }} grup",
   "{{ groupsCount }} groups with access_plural": "erişimi olan {{ groupsCount }} grup",
-  "Archived by {{userName}}": "{{userName}} tarafından arşivlendi",
-  "Sorry, an error occurred saving the collection": "Üzgünüz, koleksiyon kaydedilirken bir hata oluştu",
-  "Add a description": "Bir açıklama ekle",
   "Overview": "Genel Bakış",
   "Popular": "Popular",
   "Recently updated": "Yakın zamanda güncellenen",
   "Recently published": "Yakın zamanda yayınlanan",
   "Least recently updated": "En az yakın zamanda güncellenen",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "{{userName}} tarafından arşivlendi",
+  "Sorry, an error occurred saving the collection": "Üzgünüz, koleksiyon kaydedilirken bir hata oluştu",
+  "Add a description": "Bir açıklama ekle",
   "Signing in": "Giriş yapılıyor",
   "You can safely close this window once the Outline desktop app has opened": "Outline masaüstü uygulaması açıldıktan sonra bu pencereyi güvenle kapatabilirsiniz",
   "Error creating comment": "Yorum oluşturulurken hata oluştu",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "{{noun}} düzenle",
   "Archived": "Arşivlendi",
   "Save draft": "Taslağı kaydet",
-  "Done editing": "Düzenleme bitti",
   "Restore version": "Sürümü geri yükle",
   "No history yet": "Henüz tarihçe yok",
   "Source": "Kaynak",
