fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Вийти",
   "Mark notifications as read": "Позначити сповіщення як прочитані",
   "Archive all notifications": "Архівувати всі сповіщення",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Новий застосунок",
   "New Application": "Новий застосунок",
   "This version of the document was deleted": "Ця версія документу була видалена",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Вибачте, виникла помилка.",
   "Click to retry": "Натисніть, щоб повторити",
   "Back": "Назад",
+  "Notification options": "Notification options",
   "Unknown": "Невідомо",
   "Mark all as read": "Позначити все як прочитане",
   "You're all caught up": "У вас все налаштовано",
