fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -138,6 +138,8 @@
   "Log out": "退出登录",
   "Mark notifications as read": "将通知标记为已读",
   "Archive all notifications": "将所有通知存档",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "新建应用",
   "New Application": "新应用",
   "This version of the document was deleted": "此版本的文档已被删除",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "抱歉，出错了。",
   "Click to retry": "点击重试",
   "Back": "返回",
+  "Notification options": "Notification options",
   "Unknown": "未知",
   "Mark all as read": "全部标记为已读",
   "You're all caught up": "您已了解所有情况",
@@ -678,6 +681,7 @@
   "90 days": "90 天",
   "No expiration": "无期限",
   "The document archive is empty at the moment.": "文档归档目前是空的。",
+  "Done editing": "保存编辑",
   "Drop documents to import": "拖放文档以导入",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> 尚未包含任何文档",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} 个用户和 {{ groupsCount }} 个组有访问权限",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} 个用户有访问权限",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} 个组有访问权限",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} 个组有访问权限",
-  "Archived by {{userName}}": "已被 {{userName}} 存档",
-  "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
-  "Add a description": "添加描述",
   "Overview": "概览",
   "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近发布",
   "Least recently updated": "最近最少更新",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "已被 {{userName}} 存档",
+  "Sorry, an error occurred saving the collection": "抱歉，保存文档集时出错",
+  "Add a description": "添加描述",
   "Signing in": "登录中",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面应用程序打开后，你可以安全地关闭此窗口",
   "Error creating comment": "创建评论时出错",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "编辑 {{noun}}",
   "Archived": "已归档",
   "Save draft": "保存草稿",
-  "Done editing": "保存编辑",
   "Restore version": "恢复此版本",
   "No history yet": "暂无历史记录",
   "Source": "源",
