fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -138,6 +138,8 @@
   "Log out": "登出",
   "Mark notifications as read": "標記所有通知為已讀",
   "Archive all notifications": "封存所有通知",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "抱歉，發生錯誤。",
   "Click to retry": "按此重新嘗試",
   "Back": "上一步",
+  "Notification options": "Notification options",
   "Unknown": "未知",
   "Mark all as read": "全部標記為已讀",
   "You're all caught up": "已看完所有評論！",
@@ -678,6 +681,7 @@
   "90 days": "90 天",
   "No expiration": "沒有期限",
   "The document archive is empty at the moment.": "目前沒有任何文件被封存。",
+  "Done editing": "編輯完成",
   "Drop documents to import": "拖曳文件以進行匯入",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> 中還沒有任何文件。",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} 位使用者和 {{ groupsCount }} 群組具有存取權限",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} 個使用者擁有存取權限",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} 個群組擁有存取權限",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} 個群組擁有存取權限",
-  "Archived by {{userName}}": "已由 {{userName}} 封存",
-  "Sorry, an error occurred saving the collection": "抱歉，儲存到文件集時發生了錯誤。",
-  "Add a description": "新增描述",
   "Overview": "概覽",
   "Popular": "Popular",
   "Recently updated": "最近更新",
   "Recently published": "最近發布",
   "Least recently updated": "很久以前更新",
   "A–Z": "A-Z",
+  "Archived by {{userName}}": "已由 {{userName}} 封存",
+  "Sorry, an error occurred saving the collection": "抱歉，儲存到文件集時發生了錯誤。",
+  "Add a description": "新增描述",
   "Signing in": "正在登入",
   "You can safely close this window once the Outline desktop app has opened": "Outline 桌面應用程式打開後，您可以安全地關閉此視窗",
   "Error creating comment": "留言時發生錯誤",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "編輯 {{noun}}",
   "Archived": "已封存",
   "Save draft": "儲存草稿",
-  "Done editing": "編輯完成",
   "Restore version": "還原版本",
   "No history yet": "暫無歷史紀錄",
   "Source": "來源",
