fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Đăng xuất",
   "Mark notifications as read": "Đánh dấu thông báo là đã đọc",
   "Archive all notifications": "Lưu trữ tất cả thông báo",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Tạo App",
   "New Application": "Ứng dụng mới",
   "This version of the document was deleted": "Phiên bản của tài liệu đã bị xóa",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Xin lỗi, đã xảy ra lỗi.",
   "Click to retry": "Nhấp để thử lại",
   "Back": "Quay Lại",
+  "Notification options": "Notification options",
   "Unknown": "Không xác định",
   "Mark all as read": "Đánh dấu tất cả là đã đọc",
   "You're all caught up": "Bạn đã xem hết",
@@ -678,6 +681,7 @@
   "90 days": "90 ngày",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Kho lưu trữ tài liệu hiện đang trống.",
+  "Done editing": "Done editing",
   "Drop documents to import": "Thả tài liệu để nhập",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> chưa có\n                    tài liệu nào.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} người dùng và {{ groupsCount }} nhóm có quyền truy cập",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} người dùng có quyền truy cập",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} nhóm có quyền truy cập",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} nhóm có quyền truy cập",
-  "Archived by {{userName}}": "Được lưu trữ bởi {{userName}}",
-  "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
-  "Add a description": "Thêm mô tả",
   "Overview": "Tổng quan",
   "Popular": "Popular",
   "Recently updated": "Mới cập nhật",
   "Recently published": "Mới đăng tải",
   "Least recently updated": "Cập nhật ít nhất gần đây",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Được lưu trữ bởi {{userName}}",
+  "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
+  "Add a description": "Thêm mô tả",
   "Signing in": "Đang đăng nhập",
   "You can safely close this window once the Outline desktop app has opened": "Bạn có thể đóng cửa sổ này một cách an toàn sau khi ứng dụng Outline trên máy tính đã mở",
   "Error creating comment": "Lỗi khi tạo bình luận",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Chỉnh sửa {{noun}}",
   "Archived": "Đã lưu trữ",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Khôi phục phiên bản",
   "No history yet": "Chưa có lịch sử",
   "Source": "Nguồn",
