fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Sair",
   "Mark notifications as read": "Marcar notificações como lidas",
   "Archive all notifications": "Arquivar todas as notificações",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Novo App",
   "New Application": "Nova Aplicação",
   "This version of the document was deleted": "Esta versão do documento foi excluída",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Desculpe, ocorreu um erro.",
   "Click to retry": "Clique para tentar novamente",
   "Back": "Voltar",
+  "Notification options": "Notification options",
   "Unknown": "Desconhecido",
   "Mark all as read": "Marcar tudo como lido",
   "You're all caught up": "Você está em dia",
@@ -678,6 +681,7 @@
   "90 days": "90 dias",
   "No expiration": "Sem expiração",
   "The document archive is empty at the moment.": "O arquivo de documento está vazio no momento.",
+  "Done editing": "Edição concluída",
   "Drop documents to import": "Solte documentos para importar",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> não contém nenhum\n                    documento ainda.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} usuário e {{ groupsCount }} grupos com acesso",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} usuários com acesso",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupo com acesso",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupos com acesso",
-  "Archived by {{userName}}": "Arquivado por {{userName}}",
-  "Sorry, an error occurred saving the collection": "Desculpe, ocorreu um erro ao salvar a coleção",
-  "Add a description": "Adicionar uma descrição",
   "Overview": "Visão geral",
   "Popular": "Popular",
   "Recently updated": "Atualizado recentemente",
   "Recently published": "Publicado recentemente",
   "Least recently updated": "Menos recentemente atualizados",
   "A–Z": "A – Z",
+  "Archived by {{userName}}": "Arquivado por {{userName}}",
+  "Sorry, an error occurred saving the collection": "Desculpe, ocorreu um erro ao salvar a coleção",
+  "Add a description": "Adicionar uma descrição",
   "Signing in": "Iniciando sessão",
   "You can safely close this window once the Outline desktop app has opened": "Você pode fechar essa janela com segurança quando o aplicativo Outline for aberto no computador",
   "Error creating comment": "Erro ao criar comentário",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Editar {{noun}}",
   "Archived": "Arquivado",
   "Save draft": "Salvar rascunho",
-  "Done editing": "Edição concluída",
   "Restore version": "Restaurar versão",
   "No history yet": "Sem histórico por enquanto",
   "Source": "Fonte",
