fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Keluar",
   "Mark notifications as read": "Mark notifications as read",
   "Archive all notifications": "Archive all notifications",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Maaf, telah terjadi kesalahan.",
   "Click to retry": "Klik untuk mencoba lagi",
   "Back": "Kembali",
+  "Notification options": "Notification options",
   "Unknown": "Unknown",
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
@@ -678,6 +681,7 @@
   "90 days": "90 days",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "Arsip dokumen kosong saat ini.",
+  "Done editing": "Done editing",
   "Drop documents to import": "Dokumen untuk diimpor dengan drop",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> belum berisi\n                    dokumen.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} pengguna dan {{ groupsCount }} grup dengan akses",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} pengguna dengan akses",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grup dengan akses",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grup dengan akses",
-  "Archived by {{userName}}": "Diarsipkan oleh {{userName}}",
-  "Sorry, an error occurred saving the collection": "Maaf, terjadi kesalahan saat menyimpan koleksi",
-  "Add a description": "Tambahkan keterangan",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Baru diperbarui",
   "Recently published": "Baru diterbitkan",
   "Least recently updated": "Baru-baru ini diperbarui",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Diarsipkan oleh {{userName}}",
+  "Sorry, an error occurred saving the collection": "Maaf, terjadi kesalahan saat menyimpan koleksi",
+  "Add a description": "Tambahkan keterangan",
   "Signing in": "Sedang masuk",
   "You can safely close this window once the Outline desktop app has opened": "Anda dapat menutup jendela ini dengan aman setelah aplikasi desktop Outline dibuka",
   "Error creating comment": "Terjadi kesalahan saat membuat komentar",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Sunting {{noun}}",
   "Archived": "Diarsipkan",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Pulihkan versi",
   "No history yet": "Belum ada riwayat",
   "Source": "Source",
