fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -138,6 +138,8 @@
   "Log out": "خروج",
   "Mark notifications as read": "علامت‌گذاری اعلان‌ها به عنوان خوانده‌شده",
   "Archive all notifications": "آرشیو کردن تمام اعلان‌ها",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "اپلیکیشن جدید",
   "New Application": "برنامه جدید",
   "This version of the document was deleted": "این نسخه از سند حذف شده است",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "متاسفیم، یک خطا رخ داد.",
   "Click to retry": "برای امتحان مجدد کلیک کنید",
   "Back": "بازگشت",
+  "Notification options": "Notification options",
   "Unknown": "ناشناخته",
   "Mark all as read": "علامت گذاری همه بعنوان خوانده شده",
   "You're all caught up": "شما همه  اعلان ها و پیام ها را دیده اید",
