--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -138,6 +138,8 @@
   "Log out": "ออกจากระบบ",
   "Mark notifications as read": "Mark notifications as read",
   "Archive all notifications": "Archive all notifications",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "New App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Sorry, an error occurred.",
   "Click to retry": "Click to retry",
   "Back": "ย้อนกลับ",
+  "Notification options": "Notification options",
   "Unknown": "Unknown",
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
@@ -678,6 +681,7 @@
   "90 days": "90 days",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "ไม่มีเอกสารในที่เก็บเอกสารถาวรในขณะนี้",
+  "Done editing": "Done editing",
   "Drop documents to import": "Drop documents to import",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} user and {{ groupsCount }} groups with access",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} users with access",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} group with access",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} groups with access",
-  "Archived by {{userName}}": "Archived by {{userName}}",
-  "Sorry, an error occurred saving the collection": "ขออภัย เกิดข้อผิดพลาดขณะบันทึกคอลเลคชั่น",
-  "Add a description": "เพิ่มคำอธิบาย",
   "Overview": "Overview",
   "Popular": "Popular",
   "Recently updated": "Recently updated",
   "Recently published": "Recently published",
   "Least recently updated": "Least recently updated",
   "A–Z": "A–Z",
+  "Archived by {{userName}}": "Archived by {{userName}}",
+  "Sorry, an error occurred saving the collection": "ขออภัย เกิดข้อผิดพลาดขณะบันทึกคอลเลคชั่น",
+  "Add a description": "เพิ่มคำอธิบาย",
   "Signing in": "Signing in",
   "You can safely close this window once the Outline desktop app has opened": "You can safely close this window once the Outline desktop app has opened",
   "Error creating comment": "Error creating comment",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Edit {{noun}}",
   "Archived": "Archived",
   "Save draft": "Save draft",
-  "Done editing": "Done editing",
   "Restore version": "Restore version",
   "No history yet": "No history yet",
   "Source": "Source",
