fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -138,6 +138,8 @@
   "Log out": "Logg ut",
   "Mark notifications as read": "Merk varsler som lest",
   "Archive all notifications": "Arkiver alle varsler",
+  "Mark as read": "Mark as read",
+  "Mark as unread": "Mark as unread",
   "New App": "Ny app",
   "New Application": "Ny applikasjon",
   "This version of the document was deleted": "Denne versjonen av dokumentet har blitt slettet",
@@ -351,6 +353,7 @@
   "Sorry, an error occurred.": "Beklager, det oppstod en feil.",
   "Click to retry": "Klikk for å prøve igjen",
   "Back": "Tilbake",
+  "Notification options": "Notification options",
   "Unknown": "Ukjent",
   "Mark all as read": "Merk alle som lest",
   "You're all caught up": "Du er helt oppdatert",
@@ -678,6 +681,7 @@
   "90 days": "90 dager",
   "No expiration": "Ingen utløpsdato",
   "The document archive is empty at the moment.": "Dokumentarkivet er tomt for øyeblikket.",
+  "Done editing": "Ferdig med redigering",
   "Drop documents to import": "Slipp dokumenter for å importere",
   "<em>{{ collectionName }}</em> doesn’t contain any\n                    documents yet.": "<em>{{ collectionName }}</em> inneholder ingen\n                    dokumenter ennå.",
   "{{ usersCount }} users and {{ groupsCount }} groups with access": "{{ usersCount }} brukere og {{ groupsCount }} grupper med tilgang",
@@ -688,15 +692,15 @@
   "{{ usersCount }} users with access_plural": "{{ usersCount }} brukere med tilgang",
   "{{ groupsCount }} groups with access": "{{ groupsCount }} grupper med tilgang",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} grupper med tilgang",
-  "Archived by {{userName}}": "Arkivert av {{userName}}",
-  "Sorry, an error occurred saving the collection": "Beklager, det oppstod en feil ved lagring av samlingen",
-  "Add a description": "Legg til en beskrivelse",
   "Overview": "Oversikt",
   "Popular": "Popular",
   "Recently updated": "Nylig oppdatert",
   "Recently published": "Nylig publisert",
   "Least recently updated": "Minst nylig oppdatert",
   "A–Z": "A–Å",
+  "Archived by {{userName}}": "Arkivert av {{userName}}",
+  "Sorry, an error occurred saving the collection": "Beklager, det oppstod en feil ved lagring av samlingen",
+  "Add a description": "Legg til en beskrivelse",
   "Signing in": "Logger inn",
   "You can safely close this window once the Outline desktop app has opened": "Du kan trygt lukke dette vinduet når Outline-skrivebordsappen har åpnet",
   "Error creating comment": "Feil ved oppretting av kommentar",
@@ -745,7 +749,6 @@
   "Edit {{noun}}": "Rediger {{noun}}",
   "Archived": "Arkivert",
   "Save draft": "Lagre utkast",
-  "Done editing": "Ferdig med redigering",
   "Restore version": "Gjenopprett versjon",
   "No history yet": "Ingen historikk ennå",
   "Source": "Kilde",
