fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -355,6 +355,10 @@
   "Back": "Retour",
   "Notification options": "Notification options",
   "Unknown": "Inconnu",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Tout marquer comme lu",
   "You're all caught up": "Vous êtes à jour",
   "Client type": "Client type",
