fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -355,6 +355,10 @@
   "Back": "Atrás",
   "Notification options": "Notification options",
   "Unknown": "Desconocido",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Marcar todas como leídas",
   "You're all caught up": "Estás al día",
   "Client type": "Client type",
