fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -355,6 +355,10 @@
   "Back": "Zpět",
   "Notification options": "Notification options",
   "Unknown": "Neznámý",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Označit vše jako přečtené",
   "You're all caught up": "Již nic nového",
   "Client type": "Client type",
