fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -355,6 +355,10 @@
   "Back": "Tilbage",
   "Notification options": "Notification options",
   "Unknown": "Ukendt",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Marker alle som læst",
   "You're all caught up": "Du er helt ajour",
   "Client type": "Klienttype",
