fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -355,6 +355,10 @@
   "Back": "Zurück",
   "Notification options": "Notification options",
   "Unknown": "Unbekannt",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
   "Client type": "Client type",
