fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -355,6 +355,10 @@
   "Back": "Vissza",
   "Notification options": "Notification options",
   "Unknown": "Ismeretlen",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Összes megjelölése olvasottként",
   "You're all caught up": "Minden hozzászólást elolvasott",
   "Client type": "Client type",
