fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -355,6 +355,10 @@
   "Back": "Indietro",
   "Notification options": "Notification options",
   "Unknown": "Sconosciuto",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Contrassegna tutto come letto",
   "You're all caught up": "Sei completamente aggiornato",
   "Client type": "Tipo di cliente",
