fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -355,6 +355,10 @@
   "Back": "戻る",
   "Notification options": "Notification options",
   "Unknown": "不明",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "全て既読にする",
   "You're all caught up": "全て確認済み",
   "Client type": "Client type",
