fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -355,6 +355,10 @@
   "Back": "뒤로 가기",
   "Notification options": "Notification options",
   "Unknown": "알 수 없음",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "모두 읽은 상태로 표시",
   "You're all caught up": "모두 확인함",
   "Client type": "Client type",
