fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -355,6 +355,10 @@
   "Back": "Wstecz",
   "Notification options": "Notification options",
   "Unknown": "Nieznane",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Oznacz wszystkie jako przeczytane",
   "You're all caught up": "Jesteś na bieżąco",
   "Client type": "Client type",
