--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -355,6 +355,10 @@
   "Back": "Voltar",
   "Notification options": "Notification options",
   "Unknown": "Desconhecido",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Marcar todos como lido",
   "You're all caught up": "Já estás a par de tudo",
   "Client type": "Client type",
