fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -355,6 +355,10 @@
   "Back": "Tillbaka",
   "Notification options": "Notification options",
   "Unknown": "Okänd",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Markera alla som lästa",
   "You're all caught up": "Inga olästa meddelanden",
   "Client type": "Client type",
