fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -355,6 +355,10 @@
   "Back": "Geri",
   "Notification options": "Notification options",
   "Unknown": "Bilinmeyen",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Tümünü okundu olarak işaretle",
   "You're all caught up": "Tüm bildirimleri gördünüz",
   "Client type": "Client type",
