fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -355,6 +355,10 @@
   "Back": "Назад",
   "Notification options": "Notification options",
   "Unknown": "Невідомо",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Позначити все як прочитане",
   "You're all caught up": "У вас все налаштовано",
   "Client type": "Тип клієнта",
