fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -355,6 +355,10 @@
   "Back": "返回",
   "Notification options": "Notification options",
   "Unknown": "未知",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "全部标记为已读",
   "You're all caught up": "您已了解所有情况",
   "Client type": "Client type",
