fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -355,6 +355,10 @@
   "Back": "上一步",
   "Notification options": "Notification options",
   "Unknown": "未知",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "全部標記為已讀",
   "You're all caught up": "已看完所有評論！",
   "Client type": "Client type",
