fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -355,6 +355,10 @@
   "Back": "Quay Lại",
   "Notification options": "Notification options",
   "Unknown": "Không xác định",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Đánh dấu tất cả là đã đọc",
   "You're all caught up": "Bạn đã xem hết",
   "Client type": "Client type",
