fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -355,6 +355,10 @@
   "Back": "بازگشت",
   "Notification options": "Notification options",
   "Unknown": "ناشناخته",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "علامت گذاری همه بعنوان خوانده شده",
   "You're all caught up": "شما همه  اعلان ها و پیام ها را دیده اید",
   "Client type": "Client type",
