fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -355,6 +355,10 @@
   "Back": "Tilbake",
   "Notification options": "Notification options",
   "Unknown": "Ukjent",
+  "Mentions": "Mentions",
+  "Comments and replies": "Comments and replies",
+  "Document events": "Document events",
+  "Collection events": "Collection events",
   "Mark all as read": "Merk alle som lest",
   "You're all caught up": "Du er helt oppdatert",
   "Client type": "Client type",
