fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -113,7 +113,7 @@
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
-  "New emoji": "New emoji",
+  "New emoji": "Neuer Emoji",
   "Upload emoji": "Upload emoji",
   "Disconnect": "Trennen",
   "Disconnect analytics": "Analytics trennen",
@@ -138,8 +138,8 @@
   "Log out": "Ausloggen",
   "Mark notifications as read": "Markiere Benachrichtigungen als gelesen",
   "Archive all notifications": "Archiviere alle Benachrichtigungen",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Als gelesen markieren",
+  "Mark as unread": "Als ungelesen markieren",
   "New App": "Neue Anwendung",
   "New Application": "Neue Anwendung",
   "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
@@ -258,8 +258,8 @@
   "Currently editing": "Derzeit in Bearbeitung",
   "Currently viewing": "Gerade angezeigt",
   "Viewed {{ timeAgo }}": "Angesehen {{ timeAgo }}",
-  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "File type not supported. Please use PNG, JPG, GIF, or WebP.",
-  "File size too large. Maximum size is {{ size }}.": "File size too large. Maximum size is {{ size }}.",
+  "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Dateityp ist nicht unterstützt. Bitte verwende ein PNG, JPG, GIF oder WebP.",
+  "File size too large. Maximum size is {{ size }}.": "Die Datei ist zu groß. Maximal erlaubte Größe {{ size }}.",
   "Please enter a name for the emoji": "Please enter a name for the emoji",
   "Please select an image file": "Please select an image file",
   "Emoji created successfully": "Emoji created successfully",
