Account for custom retention in UI

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -234,6 +234,8 @@
   "Only visible to you": "Only visible to you",
   "Draft": "Draft",
   "Template": "Template",
+  "Permanently deletes in {{ days }} days": "Permanently deletes in {{ days }} days",
+  "{{ days }} days": "{{ days }} days",
   "You updated": "You updated",
   "{{ userName }} updated": "{{ userName }} updated",
   "You deleted": "You deleted",
